--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-paper": "^5.12.5"
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^5.0.0",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
