--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "expo": "~52.0.23",
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "camelize": "^1.0.1",
+    "expo": "^52.0.29",
+    "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.0",
+    "metro": "^0.81.1",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.6",
     "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "^5.0.0",
-    "styled-components": "^6.1.14"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,5 +35,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.4.2"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
