--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/oswald": "^0.2.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "camelize": "^1.0.1",
     "expo": "^52.0.29",
     "expo-font": "~13.0.3",
@@ -25,7 +26,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
