--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
@@ -19,15 +20,18 @@
     "expo": "^52.0.29",
     "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.3.1",
     "metro": "^0.81.1",
     "react": "18.3.1",
     "react-native": "^0.76.6",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-webview": "13.12.5",
     "styled-components": "^5.3.11",
-    "react-native-maps": "1.18.0"
+    "lottie-react-native": "7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
