--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-svg": "15.8.0",
     "react-native-webview": "13.12.5",
     "styled-components": "^5.3.11",
-    "lottie-react-native": "7.1.0"
+    "lottie-react-native": "7.1.0",
+    "expo-dev-client": "~5.0.12",
+    "expo-camera": "~16.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
